resolved overflow on events page

--- a/src/styles/components/pages/Events/_Events.scss
+++ b/src/styles/components/pages/Events/_Events.scss
@@ -291,7 +291,7 @@ a:focus {
 .Events-item__category-column {
   -webkit-flex-direction: column;
   flex-direction: column;
-  height: 100%;
+  height: 85%;
   overflow: scroll;
 }
 
